# RAG-end-to-end-with-eval

./: DEBUG_FIXES_SUMMARY.md  pyproject.toml  sample.db
.guardrails/: hub_registry.json
DPO/: dpo_dataset.py
Dockerfiles/: Dockerfile.rag.api  Dockerfile.rag.ui
Ingestion_plus_Retriever_eval/: evaluation_dataset.csv  logger.py  main.py
Ingestion_plus_Retriever_eval/Protocols/: vector_db_protocol.py
Ingestion_plus_Retriever_eval/Repositories/: file_repository.py  pinecone_repository.py
Ingestion_plus_Retriever_eval/configs/: pinecone_config.py
Ingestion_plus_Retriever_eval/src/: chunker_service.py  openai_embedding.py  pipeline.py  recursive_character_text_splitting.py  sentence_transformer_embedding.py  sparse_embedding.py  upsert_service.py
UI/: app.py
load_testing/: locustfile.py
notebooks/: hard_evals.ipynb  hard_evals1.ipynb  hard_evals2.ipynb  hard_evals3.ipynb
notebooks/datasets/openai_large/: chunk_query_relevant_docs.csv  chunk_to_query_mapping.csv
notebooks/datasets/openai_small/: all_chunks.csv  chunk_to_query_mapping.csv  chunk_to_query_relevantdocs_mapping.csv
notebooks/datasets/sentence_transformers/: chunk_query_relevant_docs.csv  chunk_to_query_mapping.csv
rag_pipeline/api/: container.py  main.py
rag_pipeline/api/routes/: ask_endpoint.py
rag_pipeline/ragas_eval/: finetuned_llm.ipynb  ragas_gpt_4o_mini.ipynb  ragas_gpt_5_mini.ipynb
rag_pipeline/workflow/: config.py  graph.py  node_orchestrator.py  service.py  state.py
rag_pipeline/workflow/configs/: db_config.py  llm_config.py  pinecone_config.py  vector_db_config.py
(+17 files in other folders)
