[project]
name = "rag20march-with-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.20",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.3",
    "pypdf>=6.9.1",
]
